--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: CI/CD counter app
 on:
   push:
     branches:
-    - master
+    - main
 
 jobs:
 #First we will see the application build or not , then we will deploy in EC2
