--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,24 @@
-name: CI/CD counter app
+name: Push-to-EC2
 
-on:
+on: 
   push:
-    branches:
-    - main
+    branches: 
+      - master
 
 jobs:
-#First we will see the application build or not , then we will deploy in EC2
-  build:
+  deploy:
+    name: Push to EC2 Instance
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Git clone
-      uses: actions/checkout@v2
-    
-   
-  Deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: easingthemes/ssh-deploy@main
-      - name: Deploy in EC2
+      - name: Checkout the code
+        uses: actions/checkout@v1
+
+      - name: Deploy to my EC2 instance
+        uses: easingthemes/ssh-deploy@v2.1.5
         env:
-            PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY  }}
-            HOSTNAME : ${{ secrets.HOSTNAME  }}
-            USER_NAME : ${{ secrets.USER_NAME  }}
-            TARGET_DIR : ${{ secrtets.TARGET }}
+          SSH_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
+          SOURCE: "./"
+          REMOTE_HOST: ${{ secrets.HOSTNAME }}
+          REMOTE_USER: "ec2-user"
+          TARGET: ${{ secrets.TARGET }}
