--- a/.github/workflows/pushtoec2.yml
+++ b/.github/workflows/pushtoec2.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Deploy to my EC2 instance
         uses: easingthemes/ssh-deploy@v2.1.5
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
-          SOURCE: "nar3kjan/appforjenkins"
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+          SOURCE: "./"
           REMOTE_HOST: ${{ secrets.HOSTNAME }}
           REMOTE_USER: "ec2-user"
           TARGET: ${{ secrets.TARGET }}
