--- a/.github/workflows/pushtoec2.yml
+++ b/.github/workflows/pushtoec2.yml
@@ -1,24 +1,29 @@
-name: Push-to-EC2
+name: Node CI
 
-on: 
-  push:
-    branches: 
-      - main
+on: [push]
 
 jobs:
-  deploy:
-    name: Push to EC2 Instance
+  build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v1
-
-      - name: Deploy to my EC2 instance
-        uses: easingthemes/ssh-deploy@v2.1.5
-        env:
+    - uses: actions/checkout@v1
+    - name: Install Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run build task
+      run: npm run build --if-present
+    - name: Deploy to Server
+      uses: easingthemes/ssh-deploy@main
+      env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-          SOURCE: "./"
+          ARGS: "-rltgoDzvO --delete"
+          SOURCE: "dist/"
           REMOTE_HOST: ${{ secrets.HOSTNAME }}
-          REMOTE_USER: "ec2-user"
+          REMOTE_USER: ${{ secrets.USER_NAME }}
           TARGET: ${{ secrets.TARGET }}
+          EXCLUDE: "/dist/, /node_modules/"
